--- a/css/component.css
+++ b/css/component.css
@@ -6,3 +6,19 @@
 	height: 100%;
 	overflow: hidden;
 }
+
+.round_photo{
+    width:170px;
+    height:170px;
+    border:4px solid #ddddde;
+    -moz-border-radius: 90px;
+    -webkit-border-radius: 90px;
+    border-radius:90px;
+    behavior:url(PIE.htc);
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-left: -85px;
+    margin-top: -25px;
+    display: none;
+}
